# fmm

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.TXT  Makefile  README.md  StudentDetails  annotated.html  annotated_dup.js  app_2ubodt__gen__app_8cpp.html  app_2ubodt__gen__app_8cpp_source.html  appveyor.yml  build_manylinux_wheel.sh  class_f_m_m_1_1_c_o_r_e_1_1_line_string-members.html  class_f_m_m_1_1_c_o_r_e_1_1_line_string.html  class_f_m_m_1_1_c_o_r_e_1_1_line_string.js  class_f_m_m_1_1_i_o_1_1_c_s_v_match_result_writer-members.html  class_f_m_m_1_1_i_o_1_1_c_s_v_match_result_writer.html  class_f_m_m_1_1_i_o_1_1_c_s_v_match_result_writer.js  class_f_m_m_1_1_i_o_1_1_c_s_v_point_reader-members.html  class_f_m_m_1_1_i_o_1_1_c_s_v_point_reader.html  class_f_m_m_1_1_i_o_1_1_c_s_v_point_reader.js  class_f_m_m_1_1_i_o_1_1_c_s_v_trajectory_reader-members.html  class_f_m_m_1_1_i_o_1_1_c_s_v_trajectory_reader.html  class_f_m_m_1_1_i_o_1_1_c_s_v_trajectory_reader.js  class_f_m_m_1_1_i_o_1_1_g_d_a_l_trajectory_reader-members.html  class_f_m_m_1_1_i_o_1_1_g_d_a_l_trajectory_reader.html  class_f_m_m_1_1_i_o_1_1_g_d_a_l_trajectory_reader.js  class_f_m_m_1_1_i_o_1_1_g_p_s_reader-members.html  class_f_m_m_1_1_i_o_1_1_g_p_s_reader.html  class_f_m_m_1_1_i_o_1_1_g_p_s_reader.js  class_f_m_m_1_1_i_o_1_1_i_trajectory_reader-members.html  class_f_m_m_1_1_i_o_1_1_i_trajectory_reader.html  class_f_m_m_1_1_i_o_1_1_i_trajectory_reader.js  (+428 more)
.github/ISSUE_TEMPLATE/: bug_report.md
app/: config.hpp  fmm.cpp  fmm_omp.cpp  ubodt_gen.cpp  ubodt_gen_omp.cpp  ubodt_gen_opt.cpp
data/: Points.dbf  Points.shx  README.md  candidate_list.csv  data_import.sql  edges.dbf  edges_node_gap.dbf  edges_node_gap.shp  edges_node_gap.shx  ids.txt  input.txt  large_gap.csv  mr_geom.txt  mr_stay.txt  podt_generate.txt  podt_next.txt  poi.dbf  poi.shp  poi.shx  small_graph.csv  small_podt.txt  small_podt_shp.txt  trips.dbf  trips.shp  trips.shx  trips_stat.txt  trips_subset.txt
dev/: fmm_ubodt_dijkstra.cpp  network_graph.hpp  readme.md  transition_graph_routing.hpp  ubodt_routing.hpp
dev/adv_mode/: Makefile  fmm_ubodt_dijkstra.cpp  network_graph.hpp  readme.md  transition_graph_routing.hpp  ubodt_routing.hpp
dev/omp/: Makefile  bgl_example.cpp  hello.c  hello_thread.c  omp_test.cpp  parallel_bgl.cpp  parallel_rtree.cpp  readme.md  rtree_example.cpp  test.txt
dev/serialization/: .gitignore  Makefile  binary2ubodt.cpp  readme.md  ubodt.txt  ubodt2binary.cpp
docker/: Dockerfile  Dockerfile.manylinux2010  README.md
docs/: Doxyfile  index.md
example/: README.md  fmm_config.xml  fmm_config_csv_point.xml  fmm_config_csv_trajectory.xml  fmm_config_omp.xml  fmm_config_output_fields.xml  mr.txt  stmatch_config.xml  stmatch_config_omp.xml  ubodt.txt  ubodt_config.xml  ubodt_config_omp.xml
example/command_line_example/: fmm_config.xml  fmm_config_csv_point.xml  fmm_config_csv_trajectory.xml  fmm_config_omp.xml  fmm_config_output_fields.xml  osm_test.md  readme.md  stmatch_config.xml  stmatch_config_omp.xml  ubodt_config.xml  ubodt_config_omp.xml
example/cpp-api/: CMakeLists.txt  README.md  main.cpp
example/cpp-api/cmake/: FindConda.cmake  FindFMM.cmake  findFMM.cmake
example/data/: gps.csv  gps_timestamps.csv  nodes.shp  readme.md  trips.csv  trips.shp  trips.shx  ubodt.txt
example/h3/: README.md  h3demo.ipynb  hex.csv  traj.csv
example/notebook/: fmm_example.ipynb  post_processing.ipynb  stmatch_example.ipynb
example/osm_example/: .gitignore  README.md  osm_test.md  traj.csv
example/osmnx_example/: .gitignore  README.md  download_network.ipynb  map_matching.ipynb  stockholm_boundary.geojson
example/partial_match/: fmm_config_csv.xml  mr_outlier.txt  readme.md  trips_outlier.csv
example/python/: fmm_test.py
example/segment/: README.md  fmm_config_csv.xml  mr_outlier.txt  trips_outlier.csv
example/web_demo/: .gitignore  README.md  app.py  fmm_config.json  fmm_config.xml  fmm_web_app.py  mapmatcher.py  stmatch_config.json  stmatch_config_osm.json  web_demo.py
include/fiboheap/: README.md  fiboheap.h  fiboqueue.h  test_fiboheap.cc
preprocess/: readme.md
python/: .gitignore  CMakeLists.txt  Makefile  __init__.py  _version.py  demo.py  example.c  example.i  example.py  fmm.h  fmm.hpp  fmm.i  fmm.py  fmm_config.xml  fmm_demo.ipynb  fmm_example.ipynb  fmm_test.py  linestring_example.cpp  mygdal.cpp  mygdal.hpp  mygdal.i  mygdal.py  mygdalmodule.cpp  python_types.hpp  readme.md  setup.py  stmatch_example.ipynb
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+76 more)
src/: algorithm.hpp  bgl_driving_dist.hpp  config.hpp  debug.h  fmm-api.hpp  fmm.hpp  geometry_type.hpp  gps.hpp  graph_type.hpp  heap.hpp  multilevel_debug.h  network.hpp  network_graph.hpp  network_graph_drive_dist.hpp  network_graph_omp.hpp  network_graph_opt.hpp  network_graph_opt_omp.hpp  network_graph_opt_omp_backup.hpp  python_types.hpp  reader.hpp  transition_graph.hpp  types.hpp  ubodt.hpp  util.hpp  writer.hpp
src/algorithm/: geom_algorithm.cpp  geom_algorithm.hpp
src/app/: fmm.cpp  fmm_omp.cpp  h3mm.cpp  shapelib_test.cpp  stmatch.cpp  ubodt_gen.cpp  ubodt_gen_app.cpp  ubodt_gen_omp.cpp
src/config/: app_config.cpp  app_config.hpp  arg_config.cpp  arg_config.hpp  gps_config.cpp  gps_config.hpp  network_config.cpp  network_config.hpp  result_config.cpp  result_config.hpp  (+1 more)
test/: CMakeLists.txt  algorithm_test.cpp  fmm_test.cpp  network_graph_test.cpp  network_test.cpp  stmatch_test.cpp  ubodt_test.cpp
test/data/: mr.txt  network.gpkg  ubodt.txt
web_demo/: README.md  fmm_web_app.py
(+92 files in other folders)
